@@ -1,5 +1,9 @@
 yoshimi 2.1.0 M
 
+2010-9-11 Will
+* BugFix: Crash when trying to clear or save inactive part.
+* Added missing ALSA connection type to config list report.
+
 2010-9-10 Will
 * Commented out legit filename test in MidiLearn.cpp
   This was falsely adjusting valid filenames.
